# NN_with_backprop

./: .gitignore  README.md  publish_package.md  pyproject.toml
data/data_to_test/: binary_classification_data.csv  binary_classification_data_4_f.csv
data/scripts/: generate_binary_class_data.py  generate_binary_class_data_4_features.py
deprecated/: backprop.py  backprop_1.py  layers.py  learner.py  test_feed_forward_1.py  test_layers.py
experiments/: Binary_classification.ipynb  exp.ipynb
src/: feed_forward.py  layers.py  main.py
src/core/: backprop.py  feed_forward.py  layers.py  learner.py
src/nn_with_backprop_pk/core/: backprop.py  feed_forward.py  layers.py  learner.py
src/nn_with_backprop_pk/utils/: data_randomize.py  data_split.py  derivatives.py
src/utils/: activations.py  derivatives.py  loss_functions.py  parameters_init.py
tests/: test_backprop.py  test_binary_classification_accuracy.py  test_feed_forward.py  test_layers.py  test_learner.py  test_train_test_split.py
