[tool.poetry]
name = "nn with backprop"
version = "0.1.0"
description = "Poetry file for the project NN with backprop"
authors = ["ppkhairn"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.1"
pandas = "^2.3.0"
python-dotenv = "^1.1.1"
setuptools = "^80.9.0"
wheel = "^0.45.1"
pytest = "^8.4.1"
matplotlib = "^3.10.3"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
